--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -6,6 +6,9 @@
         <span class="profile-link">
           <%= link_to 'See Profile',  user_path(user), class: 'profile-link' %>
         </span>
+        <button>
+          <%= link_to 'Invite',  user_path(user), class: 'profile-link' %>
+        </button>
       </li>
     <% end %>
   </ul>
