--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,12 +2,12 @@
   <ul class="users-list">
     <% @users.each do |user| %>
     <li>
-        Name: <%= user.name %>
+        <%= user.name %>
         <span class="profile-link">
           <%= link_to 'See Profile',  user_path(user), class: 'profile-link' %>
         </span>
         <span class="profile-link">
-          <%= link_to('Invite', invite_path(user_id: user.id), method: :post) %>
+          <%= invite_or_pending_btn(user) %>
         </span>
       </li>
     <% end %>
