--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,10 +7,18 @@
     </ul>
   </article>
   <article class="timeline">
-    <h3>Pending Invitations:</h3>
+    <h3>Sent Invitations:</h3>
     <ul class="posts">
       <% @pending.each do |invitation|%>
-        <li><%= invitation.name %> </li>
+          <li><%= invitation.name %></li>
+      <% end %>
+    </ul>
+  </article>
+  <article class="timeline">
+    <h3>Incoming Invitations:</h3>
+    <ul class="posts">
+      <% @incoming.each do |invitation|%>
+          <li><%= invitation.name %> <%= link_to('Accept', invite_path(user_id: invitation.id), method: :put) %></li>
       <% end %>
     </ul>
   </article>
